--- a/Exercise2.ipynb
+++ b/Exercise2.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/lowvey/CCMACLRL_EXERCISES_COM232/blob/main/Copy_of_Exercise2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/lowvey/CCMACLRL_EXERCISES_COM232/blob/main/Exercise2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -1503,6 +1503,56 @@
           },
           "metadata": {},
           "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sum_of_squared_errors = str(np.sum(np.square(df1['Actual_Salary'] - df1['Predicted_Salary'])))\n",
+        "\n",
+        "print('residual sum of squares is : ', sum_of_squared_errors)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FBMxF0dwb9fr",
+        "outputId": "b9a17802-32fb-4ea8-fab0-08fd1d5e7683"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "residual sum of squares is :  353018988.87134814\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import r2_score\n",
+        "r2 = r2_score(y_test, y_pred)\n",
+        "print(r2)"
+      ],
+      "metadata": {
+        "id": "DR5aldOWcJKb",
+        "outputId": "c6e096c5-d040-43e5-8dcb-7dd93ccf4312",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.955306313804495\n"
+          ]
         }
       ]
     }
