--- a/Exercise2B.ipynb
+++ b/Exercise2B.ipynb
@@ -2644,7 +2644,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Model 7: Miles Traveled, Number of Deliveries, Gas Price and Travel Time\n"
+        "### Model 7: Miles Traveled, Number of Deliveries, Gas Price and Travel Time **Best** **R** **squared**\n"
       ],
       "metadata": {
         "id": "VEDr34a3zKew"
